Add Maven exporter tests and move maven-metals to sbt